--- a/Stock_Analisys.ipynb
+++ b/Stock_Analisys.ipynb
@@ -6,7 +6,7 @@
       "name": "Stock Analisys.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNwqqRTLU86YBWpu4x/UFqE",
+      "authorship_tag": "ABX9TyMMwyRvYL0NziQvIQLtOaWu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/kamyarmig/Daytrader-performance-statistics/blob/master/Stock_Analisys.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/kamyarmig/Daytrader-Stock-Technical-Prediction/blob/master/Stock_Analisys.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -70,7 +70,7 @@
       "source": [
         "!pip install mpl_finance"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -106,7 +106,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "plt.style.use('ggplot')\n",
         "plt.rcParams['figure.figsize'] = (20, 10)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -166,7 +166,7 @@
         "print(df.shape)\n",
         "df.head()\n"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -278,6 +278,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xmZUXWxPVvXl",
+        "colab_type": "text"
+      },
+      "source": [
+        "##Plot the graph in candle stick format"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "At1D5mRVafXT",
@@ -310,7 +320,7 @@
         "plt.ylabel('Price')\n",
         "plt.show()"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -340,7 +350,7 @@
       "source": [
         "df.Close.plot()"
       ],
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -382,7 +392,7 @@
       "source": [
         "df.plot(kind = \"line\", y = ['Open', 'High', 'Low','Close'])"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,7 +434,7 @@
       "source": [
         "df.Close.plot(kind = \"hist\", bins = 30)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -466,7 +476,7 @@
         "reg = linear_model.LinearRegression()\n",
         "pred = reg.fit(x, y).predict(x)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -484,7 +494,7 @@
         "df['linear'] = pred\n",
         "df.plot(kind=\"line\", x=\"Date\", y = [\"Close\", \"linear\"])"
       ],
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
